k3s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-backend
  namespace: homelab-dashboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homelab-backend
  template:
    metadata:
      labels:
        app: homelab-backend
    spec:
      containers:
        - name: backend
          image: jeanmichelbb/homelab-be:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: homelab-backend
  namespace: homelab-dashboard
spec:
  selector:
    app: homelab-backend
  ports:
    - port: 8000
      targetPort: 8000
