k3s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-frontend
  namespace: homelab-dashboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homelab-frontend
  template:
    metadata:
      labels:
        app: homelab-frontend
    spec:
      containers:
        - name: frontend
          image: jeanmichelbb/homelab-fe:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: homelab-frontend
  namespace: homelab-dashboard
spec:
  selector:
    app: homelab-frontend
  ports:
    - port: 80
      targetPort: 80
