k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-dashboard
  namespace: homelab-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: homelab.sacenpapier.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: homelab-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - homelab.sacenpapier.org
